--- a/apps/b2gfm.yml
+++ b/apps/b2gfm.yml
@@ -1,10 +1,10 @@
 name: Kloud File Manager
-description: File Manager & Kloudless app(unofficial) for for KaiOS
+description: File Manager & Kloudless app(unofficial) for KaiOS
 icon: "https://cdn.discordapp.com/attachments/472144650128457738/839176477325000734/b2gffff.png"
 website: "https://github.com/arma7x/b2gfm"
 download:
   url: "https://gitlab.com/cyan2048/snek/-/raw/master/b2gfm.zip?inline=false"
-  version: "1.2.1"
+  version: "1.3.0"
 type: privileged
 license: MIT
 author: arma7x <arma7x@live.com>
