--- a/apps/openkaios-store.yml
+++ b/apps/openkaios-store.yml
@@ -1,6 +1,6 @@
 name: openKaiOS Store Client
 description: >
-  Download and install apps.This version uses the database of openKaiOS Store. If you need to use the database of bHackers Store, please download the bHackers version.Not compatible with another version
+  Download and install apps.This version uses the database of openKaiOS Store. If you need to use the database of bHackers Store, please download the bHackers version. Not compatible with another version
 icon: https://cdn.jsdelivr.net/gh/openkaios/openkaios-store-client@master/application/icons/icon-128-128.png
 # screenshots are optional
 screenshots:
@@ -16,8 +16,8 @@ website: https://openkaios.top
 # git repo is optional
 git_repo: https://github.com/openkaios/openkaios-store-client
 download:
-  url: https://git.yumenaka.net/https://github.com/openkaios/openkaios-store-client/releases/download/2.0.1/openkaios-store-2.0.1-omnisd.zip
-  version: "2.0.1"
+  url: https://git.yumenaka.net/https://github.com/openkaios/openkaios-store-client/releases/download/2.0.2/openkaios-store-openkaios-2.0.2.zip
+  version: "2.0.2"
 author: openKaiOS
 maintainer: openKaiOS
 has_tracking: true
