--- a/apps/openkaios-store-bhackers.yml
+++ b/apps/openkaios-store-bhackers.yml
@@ -14,7 +14,7 @@ website: https://openkaios.top
 # git repo is optional
 git_repo: https://github.com/openkaios/openkaios-store-client
 download:
-  url: https://git.yumenaka.net/https://github.com/openkaios/openkaios-store-client/releases/download/2.0.2/openkaios-store-bhackers-2.0.2.zip
+  url: https://git.yumenaka.net/https://github.com/openkaios/openkaios-store-client/releases/latest/download/openkaios-store-bhackers.zip
   version: "2.0.2"
 author: openKaiOS
 maintainer: openKaiOS
