--- a/apps/openkaios-store.yml
+++ b/apps/openkaios-store.yml
@@ -16,7 +16,7 @@ website: https://openkaios.top
 # git repo is optional
 git_repo: https://github.com/openkaios/openkaios-store-client
 download:
-  url: https://git.yumenaka.net/https://github.com/openkaios/openkaios-store-client/releases/download/2.0.2/openkaios-store-openkaios-2.0.2.zip
+  url: https://git.yumenaka.net/https://github.com/openkaios/openkaios-store-client/releases/latest/download/openkaios-store-openkaios.zip
   version: "2.0.2"
 author: openKaiOS
 maintainer: openKaiOS
