--- a/apps/delta-map.yml
+++ b/apps/delta-map.yml
@@ -1,16 +1,14 @@
-name: Delta map
+name: delta.map
 description: >
   delta.map is a local offline and online caching client for viewing maps, weather, utilities, and more coming soon.
 icon: https://raw.githubusercontent.com/Delta-Applications/delta.map/main/icons/icon-112-112.png
-# screenshots are optional
 screenshots:
-  - https://raw.githubusercontent.com/strukturart/o.map/master/images/image-2.png
-  - https://raw.githubusercontent.com/strukturart/o.map/master/images/image-3.png
-  - https://raw.githubusercontent.com/strukturart/o.map/master/images/image-4.png
+  - https://github.com/Delta-Applications/delta.map/raw/main/screenshots/screenshot%20(1).png
+  - https://github.com/Delta-Applications/delta.map/raw/main/screenshots/screenshot%20(2).png
+  - https://github.com/Delta-Applications/delta.map/raw/main/screenshots/screenshot%20(3).png
+  - https://github.com/Delta-Applications/delta.map/raw/main/screenshots/screenshot%20(4).png
+  - https://github.com/Delta-Applications/delta.map/raw/main/screenshots/screenshot%20(5).png
 license: MIT
-# website is optional
-# website: https://github.com/strukturart/osm-map
-# git repo is optional
 git_repo: https://github.com/Delta-Applications/delta.map
 download:
   url: https://raw.githubusercontent.com/Delta-Applications/delta.map/main/build.zip
@@ -19,10 +17,10 @@ author: LolloDev5123;
 maintainer: LolloDev5123;
 has_tracking: false
 has_ads: false
-#donation: 
 meta:
   tags: map; openstreatmap; osm; maps; travel;
   categories: 
    - travel
+   - utility
 type: packaged
 
