--- a/apps/habit.yml
+++ b/apps/habit.yml
@@ -14,5 +14,6 @@ maintainer: Cyan <cyankindasus@protonmail.com>
 has_ads: false
 has_tracking: false
 meta:
+  tags: Habit;
   categories:
    - utility
