--- a/apps/mmh.yml
+++ b/apps/mmh.yml
@@ -5,8 +5,8 @@ screenshots:
   - "https://alego.web.fc2.com/kaiosapps/musmushighway/1.png"
 website: "https://alego.web.fc2.com/kaiosapps/musmushighway/"
 download:
-  url: "https://gitlab.com/cyan2048/snek/-/raw/master/ale4710/mmh.zip?inline=false"
-  manifest: https://gitlab.com/banana-hackers/store-db/-/raw/master/apps/mmh.json
+  url: "https://gitlab.com/cyan2048/snek/-/raw/master/ale4710/mmh/mmh.zip"
+  manifest: "https://gitlab.com/cyan2048/snek/-/raw/master/ale4710/mmh/manifest.webapp"
 type: privileged
 locales: 
   - English
