Migrate Luxferre's apps

--- a/apps/dotkvp.yml
+++ b/apps/dotkvp.yml
@@ -2,12 +2,12 @@ name: .KVP
 description: 'The first KaiOS video poker game under 3K bytes (unpacked), featuring cryptographically secure random draws. Control: Center to deal/draw, 1 to 5 to hold, 6 to 0 to select bet value.'
 icon: https://i.imgur.com/UsmWBhn.png 
 download:
-  url: https://cloud.disroot.org/s/JcjPF3k6RAp2x4a/download
-  manifest: https://gitlab.com/banana-hackers/store-db/-/raw/master/apps/dotkvp.json
+  url: "https://gitlab.com/cyan2048/snek/-/raw/master/suborg/kvp/kvp.zip"
+  manifest: "https://gitlab.com/cyan2048/snek/-/raw/master/suborg/kvp/manifest.webapp"
 type: packaged
 license: Unlicense <https://unlicense.org/>
 author: Luxferre
-maintainer: Luxferre
+maintainer: Cyan <cyankindasus@protonmail.com>
 has_ads: false
 has_tracking: false
 meta:
