--- a/apps/omap.yml
+++ b/apps/omap.yml
@@ -10,14 +10,14 @@ screenshots:
   - https://raw.githubusercontent.com/strukturart/o.map/master/images/image-2.png
   - https://raw.githubusercontent.com/strukturart/o.map/master/images/image-3.png
   - https://raw.githubusercontent.com/strukturart/o.map/master/images/image-4.png
-license: MIT
+license: unlicense
 # website is optional
 # website: https://github.com/strukturart/osm-map
 # git repo is optional
 git_repo: https://github.com/strukturart/o.map
 download:
   url: https://github.com/strukturart/osm-map/releases/latest/download/o.map-omnisd.zip
-  manifest: https://gitlab.com/banana-hackers/store-db/-/raw/master/apps/omap.json
+  manifest: https://raw.githubusercontent.com/strukturart/o.map/master/application/manifest.webapp
 author: perry<https://github.com/strukturart>
 maintainer:  perry<https://github.com/strukturart>
 has_tracking: false
